Added posts variable to user struct and GET .../posts/count API call
